--- a/templates/layout.html
+++ b/templates/layout.html
@@ -128,10 +128,10 @@
                     <ul class="navbar-nav mr-auto mt-2">
                         <!--the followingruns the quote function-->
                         <li class="nav-item"><a class="nav-link" href="/">Time Tracker</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/quote">Habit Tracker</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/buy">Goals</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/sell">Analysis</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/history">History</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Habit Tracker</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Goals</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">Analysis</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/">History</a></li>
                         <li class="nav-item"><a class="nav-link" href="/test">Test</a></li>
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
